--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsdom": "^20.0.2",
     "next": "13.0.4",
     "openai": "^3.1.0",
+    "pdf-extract": "^1.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
