--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.0.4",
     "framer-motion": "^7.6.7",
     "jsdom": "^20.0.2",
+    "nanoid": "^4.0.0",
     "next": "13.0.4",
     "openai": "^3.1.0",
     "pdf-text-extract": "^1.5.0",
