--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^7.6.7",
     "jsdom": "^20.0.2",
     "nanoid": "^4.0.0",
+    "jsonrepair": "^2.2.1",
     "next": "13.0.4",
     "openai": "^3.1.0",
     "pdf-text-extract": "^1.5.0",
