--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@types/lodash": "^4.14.189",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -20,8 +21,9 @@
     "eslint-config-next": "13.0.4",
     "framer-motion": "^7.6.7",
     "jsdom": "^20.0.2",
-    "nanoid": "^4.0.0",
     "jsonrepair": "^2.2.1",
+    "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "next": "13.0.4",
     "openai": "^3.1.0",
     "pdf-text-extract": "^1.5.0",
