--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-18-pdf/renderer": "^2.3.4",
+    "@react-18-pdf/yoga": "^2.0.5",
+    "@react-pdf/renderer": "^3.0.1",
     "@types/lodash": "^4.14.189",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
