--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.1"
