--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "docx": "^7.7.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^7.6.7",
     "jsdom": "^20.0.2",
     "jsonrepair": "^2.2.1",
@@ -37,6 +39,7 @@
     "use-debounce": "^8.0.4"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/jsdom": "^20.0.1"
   }
 }
