--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "file-saver": "^2.0.5",
+    "firebase": "^9.14.0",
     "framer-motion": "^7.6.7",
     "jsdom": "^20.0.2",
     "jsonrepair": "^2.2.1",
